--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Book#index</h1>
-<p>Find me in app/views/book/index.html.erb</p>
+<%= link_to "로그아웃", destroy_user_session_path, method: :delete %>
