--- a/app/views/book/manage.html.erb
+++ b/app/views/book/manage.html.erb
@@ -1,2 +1,3 @@
 <h1>Book#manage</h1>
 <p>Find me in app/views/book/manage.html.erb</p>
+<%= link_to "로그아웃", destroy_user_session_path, method: :delete %>
