--- a/app/views/book/select_book.html.erb
+++ b/app/views/book/select_book.html.erb
@@ -1,3 +1,3 @@
-<h1>Book#reject</h1>
-<p>Find me in app/views/book/reject.html.erb</p>
+<h1>Book#select</h1>
+<p>Find me in app/views/book/select.html.erb</p>
 <%= link_to "로그아웃", destroy_user_session_path, method: :delete %>
