--- a/app/views/locker/manage.html.erb
+++ b/app/views/locker/manage.html.erb
@@ -1,2 +1,4 @@
 <h1>Locker#manage</h1>
-<p>Find me in app/views/locker/manage.html.erb</p>
+<% @user_major_locker.each do |x| %>
+    <%= x.user.username %> : <%= x.lnum %>
+<% end %>
