--- a/app/views/locker/index.html.erb
+++ b/app/views/locker/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Locker#index</h1>
-<p>Find me in app/views/locker/index.html.erb</p>
+<h1>자신의 로커를 보여주는 곳</h1>
+
+<% if current_user.locker.nil? %>
+    <h1> 사물함을 아직 같지 못했습니다 </h1>
+    <h1>사물함 예약하기</h1>
+    <form action="/locker/first_check" method="GET">
+        <button class="btn waves-effect waves-light" type="submit" name="numbering">Take
+            <i class="material-icons right">send</i>
+        </button>
+    </form>
+<% elsif current_user.locker.lnum == 0 %>
+    <h1> 사물함을 가졌습니다 <br> 하지만 아직 사물함을 선택하지 않았습니다 </h1>
+    <p>사물함 고르러가기</p>
+    <%= link_to( 'Go', locker_selecting_path) %>
+<% else %>
+    <h1> 사물함을 가졌습니다 <br> 내 사물함은 <%= current_user.locker.lnum %>입니다 </h1>
+    
+    <br>
+    <br>
+    <h1> 사물함 반납하기 </h1>
+    <%= link_to '반납하기', locker_destroy_path %>
+    <%= link_to '우리 학과 현황', locker_manage_path %>
+<% end %>
