--- a/app/views/locker/index.html.erb
+++ b/app/views/locker/index.html.erb
@@ -3,11 +3,7 @@
 <% if current_user.locker.nil? %>
     <h1> 사물함을 아직 같지 못했습니다 </h1>
     <h1>사물함 예약하기</h1>
-    <form action="/locker/first_check" method="GET">
-        <button class="btn waves-effect waves-light" type="submit" name="numbering">Take
-            <i class="material-icons right">send</i>
-        </button>
-    </form>
+    <%= link_to "예약하기", locker_first_check_path, method: "get" %>
 <% elsif current_user.locker.lnum == 0 %>
     <h1> 사물함을 가졌습니다 <br> 하지만 아직 사물함을 선택하지 않았습니다 </h1>
     <p>사물함 고르러가기</p>
@@ -18,6 +14,6 @@
     <br>
     <br>
     <h1> 사물함 반납하기 </h1>
-    <%= link_to '반납하기', locker_destroy_path %>
+    <%= link_to '반납하기', locker_destroy_path, method: 'post' %>
     <%= link_to '우리 학과 현황', locker_manage_path %>
 <% end %>
