--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,25 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>사물함 신청</title>
-   <!-- Compiled and minified CSS -->
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../../assets/devise.scss">
-  <link rel="stylesheet" type="text/css" href="../../assets/materialize.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="../../assets/materialize.js"></script>
-  <script src="../../assets/sticker.js"></script>
-  <script src="../../assets/devise.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>사물함&중고책</title>
+  <%= stylesheet_link_tag    'application' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-  <header class="hoverable">
-  국제학부 온라인 사물함 예약서비스
-  </header>
-<%= yield %>
+<body id="page-top" onload="countdown(year,month,day,hour,minute)">
+  <!-- Navigation -->
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+          <div class="navbar-header page-scroll">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <%= link_to root_path, class: "navbar-brand page-scroll" do %><%= image_tag "company_logo.png", id: 'nav' %><% end %>
+          </div>
 
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+              <ul class="nav navbar-nav navbar-right">
+                  <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                  <li class="hidden">
+                      <a class="page-scroll" href="#page-top"></a>
+                  </li>
+                  <% if user_signed_in? %>
+                    <li class='navbar-right'>
+                      <%= link_to('회원정보 수정하기', edit_user_registration_path) %>
+                    </li>
+                    <li class='navbar-right'>
+                      <%= link_to('로그아웃', destroy_user_session_path) %>
+                    </li>
+                  <% else %>
+                    <li class='navbar-right'>
+                      <%= link_to('로그인하기', new_user_session_path)  %>
+                    </li>
+                    <li class='navbar-right'>
+                      <%= link_to('회원가입', new_user_registration_path)  %>
+                    </li>
+                  <% end %>
+                  
+                  <% if params[:controller] == 'locker' %>
+                    <li class='navbar-right'>
+                      <%= link_to('중고책 서비스',  book_index_path) %>
+                    </li>
+                  <% elsif params[:controller] == 'book' %>
+                    <li class='navbar-right'>
+                      <%= link_to('사물함 서비스', locker_index_path) %>
+                    </li>
+                  <% elsif params[:controller] == 'home' %>
+                  <% end %>
+                <li>
+                  <p class="navbar-text"><%= current_user.username rescue nil%></p>
+                </li>
+              </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+  </nav>
+
+  <!-- Intro Section -->
+  <section id="intro" class="intro-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+          <%= link_to(book_index_path) do %><%= image_tag "company_logo.png", class: "center-block img-responsive" %> <% end %>
+        </div>
+      </div>
+      
+      <%= yield %>
+    
+    </div>
+  </section>
+  
 </body>
 </html>
