--- a/app/assets/stylesheets/bootstrap/_tables.scss
+++ b/app/assets/stylesheets/bootstrap/_tables.scss
@@ -23,6 +23,9 @@ th {
   width: 100%;
   max-width: 100%;
   margin-bottom: $line-height-computed;
+  border-collapse: separate;
+  border-spacing: 3px;
+  
   // Cells
   > thead,
   > tbody,
@@ -30,17 +33,20 @@ th {
     > tr {
       > th,
       > td {
-        padding: $table-cell-padding;
+        // padding: $table-cell-padding;
+        padding: 18px;
+        width: 120px;
+        text-align: center;
         line-height: $line-height-base;
         vertical-align: top;
-        border-top: 1px solid $table-border-color;
+        // border-top: 1px solid $table-border-color;
       }
     }
   }
   // Bottom align for column headings
   > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 2px solid $table-border-color;
+    // border-bottom: 2px solid $table-border-color;
   }
   // Remove top border from thead by default
   > caption + thead,
@@ -55,7 +61,7 @@ th {
   }
   // Account for multiple tbody instances
   > tbody + tbody {
-    border-top: 2px solid $table-border-color;
+    // border-top: 2px solid $table-border-color;
   }
 
   // Nesting
