--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,7 +38,7 @@
     height: 50px;    
 }
 section {
-    margin-top: 50px;   
+    margin-top: 50px;  
     height: 100%;
 }
 body {
@@ -50,4 +50,49 @@ body {
 .hoverable:hover {
     transition: box-shadow 0.7s;
     background-color: #cfe8ff;
+}
+.blue-1 {
+    color: #00529c;
+}
+
+tr > td:nth-child(1) {
+    background-color: #cbe0f7;   
+    width: 120px;
+}
+tr > td:nth-child(2) {
+    background-color: #e3efff;   
+}
+
+#lnum {
+    color: red;    
+}
+.silver {
+    color: silver;    
+}
+
+.locker-button {
+	font-size: 15px;
+	border: 0;
+	padding: 15px;
+	width: 150px;
+	border-radius: 3px;
+	cursor: pointer;
+	background: rgb(3, 169, 245);
+	color: #fff;
+	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+}
+
+footer {
+    
+	position: absolute;
+	bottom: 0;
+	
+    width: 100%;
+    height: 80px;
+    padding: 5px;
+    background-color: #ffffff;
+    
+    img { 
+        height: 70px;
+    }
 }
