--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="row">
-  <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+  <div class="col-xs-12 col-md-12 col-lg-12 text-center">
     
     <table id="table" border="0">
         <tr>
@@ -26,11 +26,11 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-6 col-md-6 col-lg-6 text-center">
+  <div class="col-xs-6 col-md-6 col-lg-6 text-center">
     <%= link_to(book_index_path) do %><%= image_tag "books.png", class: "center-block img-responsive img-circle hoverable" %> <% end %>
     <%= link_to(book_index_path) do %><h4>중고책 신청</h4><% end %>
   </div>
-  <div class="col-sm-6 col-md-6 col-lg-6 text-center">
+  <div class="col-xs-6 col-md-6 col-lg-6 text-center">
     <%= link_to(locker_index_path) do %> <%= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><% end %>
     <%= link_to(locker_index_path) do %><h4>사물함 신청</h4><% end %>
   </div>
