Add some design

--- a/app/views/locker/manage.html.erb
+++ b/app/views/locker/manage.html.erb
@@ -1,4 +1,5 @@
-<h1>Locker#manage</h1>
-<% @user_major_locker.each do |x|%>
-    <%= x.user.username %> : <%= x.lnum %>
-<% end %>
+<div class="login">
+    <% @user_major_locker.each do |x|%>
+        <%= x.user.username %> : <%= x.lnum %>
+    <% end %>
+</div>
