--- a/app/views/locker/index.html.erb
+++ b/app/views/locker/index.html.erb
@@ -27,7 +27,9 @@
       </table>
     <div class='text-center'>
       <% if current_user.locker.nil? %>
+        <div class="form-group">
           <h5 class='silver'> 사물함 권한을 아직 같지 못했습니다 </h5>
+        </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <div class="form-group">
             <%= link_to locker_first_check_path, method: "get" do %>            
@@ -35,7 +37,9 @@
             <% end %>
           </div>
       <% elsif current_user.locker.lnum == 0 %>
+        <div class="form-group">
           <h5 class='silver'> 사물함 권한을가졌습니다 <br> 하지만 아직 사물함을 선택하지 않았습니다 </h5>
+        </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <p>사물함 고르러가기</p>
           <div class="form-group">
@@ -43,8 +47,10 @@
               <%= button_tag "사물함 고르기", class: "locker-button" %>
             <% end %>
           </div>
-      <% else %>   
+      <% else %>
+        <div class="form-group">   
           <h5 class='silver'> 사물함 권한을 가졌습니다 <br> 반납하고 다른 사물함을 찾습니다 </h5>
+          </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <div class="form-group">
             <%= link_to locker_destroy_path, method: 'post' do %>
