--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -1,7 +1,8 @@
+<div class="login">
 <h1>Locker#selecting</h1>
-
   <%= form_tag(locker_lockerselect_path, method: "post") do |f| %>
     <%= label_tag(:lnum, "사물함 번호 :") %>
     <%= text_field_tag(:lnum) %>
     <%= submit_tag("갖기") %>
   <% end %>
+</div>
