--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -47,6 +47,7 @@
 }
 section {
     margin-top: 50px;  
+    margin-bottom: 100px;
     height: 100%;
 }
 body {
@@ -62,18 +63,33 @@ body {
 .blue-1 {
     color: #00529c;
 }
-
-tr > td:nth-child(1) {
-    background-color: #cbe0f7;   
-    width: 120px;
+#locker {
+    tr > td:nth-child(1) {
+        background-color: #cbe0f7;   
+        width: 120px;
+    }
+    tr > td:nth-child(2) {
+        background-color: #e3efff;   
+    }
 }
-tr > td:nth-child(2) {
-    background-color: #e3efff;   
-}
 
-#lnum {
+
+.red {
     color: red;    
 }
+
+.skyblue {    
+    color: skyblue;    
+}
+
+#book {
+    color: #5c5c5c;
+    tr:nth-child(1) {
+        color: #00529c;   
+        background-color: #e3efff;   
+    }
+}
+
 .silver {
     color: silver;    
 }
@@ -92,9 +108,6 @@ tr > td:nth-child(2) {
 
 footer {
     
-	position: absolute;
-	bottom: 0;
-	
     width: 100%;
     height: 80px;
     padding: 5px;
@@ -103,4 +116,39 @@ footer {
     img { 
         height: 70px;
     }
+}
+
+.submit {
+	font-size: 15px;
+	border: 0;
+	padding: 15px;
+	width: 100%;
+	border-radius: 3px;
+	cursor: pointer;
+	background: rgb(3, 169, 245);
+	color: #fff;
+	box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+}
+
+.submit:focus {
+	outline: none;
+}
+
+.apply {   
+    font-size: 13px;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    background: #03a9f5;
+    color: #fff;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+}
+.return {   
+    font-size: 13px;
+    border: 0;
+    border-radius: 3px;
+    cursor: pointer;
+    background: orange;
+    color: #fff;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
 }
