Add flush message and Fix controller error

--- a/app/views/book/index.html.erb
+++ b/app/views/book/index.html.erb
@@ -1,4 +1,7 @@
 <div class="login">
+    <div  class='text-center'>
+      <p id="notice"><%= notice %></p>
+    </div>
     <h4 class='blue-1'><strong><i class="fa fa-caret-right"></i>신청 가능 도서</strong></h4>
     <table class="table" id='book'>
         <tbody>
