--- a/app/views/locker/index.html.erb
+++ b/app/views/locker/index.html.erb
@@ -1,6 +1,12 @@
 <div class='col-xs-12 col-sm-3 col-md-3 col-lg-3'>
 </div>
 <div class="login col-xs-12  col-sm-6 col-md-6 col-lg-6">
+    <div class='text-center'>
+      <p id="notice" class='text-center'><%#= notice %></p>
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+    </div>
     <h4 class='blue-1'><strong> <i class="fa fa-caret-right"></i> 현재 정보</strong></h4>
     
     <table class="table" id='locker'>
@@ -26,17 +32,17 @@
         </tbody>
       </table>
     <div class='text-center'>
-      <% if current_user.locker.nil? %>
+      <% if current_user.locker.nil? && current_user.my_num == 0 %>
         <div class="form-group">
           <h5 class='silver'> 사물함 권한을 아직 같지 못했습니다 </h5>
         </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <div class="form-group">
             <%= link_to locker_first_check_path, method: "get" do %>            
-              <%= button_tag "사물함 예약하기", class: "locker-button" %>
+              <%= button_tag "번호표 뽑기", class: "locker-button" %>
             <% end %>
           </div>
-      <% elsif current_user.locker.lnum == 0 %>
+      <% elsif current_user.locker && current_user.locker.lnum == 0 %>
         <div class="form-group">
           <h5 class='silver'> 사물함 권한을가졌습니다 <br> 하지만 아직 사물함을 선택하지 않았습니다 </h5>
         </div>
@@ -47,9 +53,15 @@
               <%= button_tag "사물함 고르기", class: "locker-button" %>
             <% end %>
           </div>
+      <% elsif current_user.my_num > current_user.major.locker_limit %>
+        <div class="form-group">   
+          <h5 class='silver'> 1차 선발에서 떨어졌습니다.<br>
+          사물함 제한 인원 <%= current_user.major.locker_limit %>명 중 <% current_user.my_num %>번째로 접수했습니다.</h5>
+          </div>
+        <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
       <% else %>
         <div class="form-group">   
-          <h5 class='silver'> 사물함 권한을 가졌습니다 <br> 반납하고 다른 사물함을 찾습니다 </h5>
+          <h5 class='silver'> 사물함 권한을 가졌습니다 <br> 반납하고 다른 사물함을 찾을 수 있습니다.</h5>
           </div>
         <div class='col-xs-6 col-sm-6 col-md-6 col-lg-6'>
           <div class="form-group">
