--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     
       <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12 text-center">
-          <%= link_to(book_index_path) do %><%= image_tag "company_logo.png", class: "center-block img-responsive" %> <% end %>
+          <%= link_to(root_path) do %><%= image_tag "company_logo.png", class: "center-block img-responsive" %> <% end %>
         </div>
       </div>
       
