--- a/app/views/locker/selecting.html.erb
+++ b/app/views/locker/selecting.html.erb
@@ -13,9 +13,15 @@
           <tbody>
             <% 1.upto(4) do |x| %>
             <tr>
-              <td><%= 1 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 2 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 3 + ( 11 * ( x  - 1 )) %></td>
+              <% if Locker.where(lnum: 1 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 1 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 2 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 2 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 3 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 3 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
@@ -26,10 +32,18 @@
           <tbody>
             <% 1.upto(4) do |x| %>
             <tr>
-              <td><%= 4 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 5 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 6 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 7 + ( 11 * ( x  - 1 )) %></td>
+              <% if Locker.where(lnum: 4 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 4 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 5 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 5 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 6 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 6 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 7 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 7 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
@@ -40,10 +54,18 @@
           <tbody>
             <% 1.upto(4) do |x| %>
             <tr>
-              <td><%= 8 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 9 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 10 + ( 11 * ( x  - 1 )) %></td>
-              <td><%= 11 + ( 11 * ( x  - 1 )) %></td>
+              <% if Locker.where(lnum: 8 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 8 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 9 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 9 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 10 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 10 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
+              <% if Locker.where(lnum: 11 + ( 11 * ( x  - 1 ))).take.nil? %>
+                <td><%= 11 + ( 11 * ( x  - 1 )) %></td>
+              <% end %>
             </tr>
             <% end %>
           </tbody>
