--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,38 +8,44 @@
 
 //타이머 커스터마이징
 .numbers {
-        border-style: ridge;    /* options are none, dotted, dashed, solid, double, groove, ridge, inset, outset */
-        border-width: 2px;
-        border-color: #666666;  /* change the border color using the hexadecimal color codes for HTML */
-        background: #222222;    /* change the background color using the hexadecimal color codes for HTML */
-        padding: 2px 0px;
-        width: 55px;
+        //border-style: ridge;    /* options are none, dotted, dashed, solid, double, groove, ridge, inset, outset */
+        //border-width: 2px;
+        //border-color: #ffffff;  /* change the border color using the hexadecimal color codes for HTML */
+        //background: #ffffff;    /* change the background color using the hexadecimal color codes for HTML */
+        //padding: 2px 0px;
+        width: 50px;
         text-align: center; 
-        font-family: Arial; 
+        //font-family: Arial; 
         font-size: 28px;
         font-weight: bold;    /* options are normal, bold, bolder, lighter */
         font-style: normal;   /* options are normal or italic */
-        color: #FFFFFF;       /* change color using the hexadecimal color codes for HTML */
-    }
-    .title {    /* the styles below will affect the title under the numbers, i.e., “Days”, “Hours”, etc. */
-        border: none;    
-        padding: 0px;
-        width: 55px;
+        color: #000000;       /* change color using the hexadecimal color codes for HTML */
+}
+.title {    /* the styles below will affect the title under the numbers, i.e., “Days”, “Hours”, etc. */
+        //border: solid;    
+        padding-top: 3px;
+        //padding: 0px;
+        width: 30px;
         text-align: center; 
-        font-family: Arial; 
-        font-size: 10px; 
+        //font-family: Arial; 
+        font-size: 25px; 
         font-weight: normal;  /* options are normal, bold, bolder, lighter */
-        color: #DDDDDD;       /* change color using the hexadecimal color codes for HTML */
+        color: #595959;       /* change color using the hexadecimal color codes for HTML */
         background: transparent;    /* change the background color using the hexadecimal color codes for HTML */
-    }
-    #table {
-        width: 400px;
-        border: none;    /* options are none, dotted, dashed, solid, double, groove, ridge, inset, outset */
+}
+#table {
+        width: 350px;
+        //border: solid;    /* options are none, dotted, dashed, solid, double, groove, ridge, inset, outset */
         margin: 0px auto;
         position: relative;    /* leave as "relative" to keep timer centered on your page, or change to "absolute" then change the values of the "top" and "left" properties to position the timer */
         top: 0px;        /* change to position the timer */
         left: 0px;       /* change to position the timer; delete this property and it's value to keep timer centered on page */
-    }
+}
+
+td{
+    height: 50px;
+    vertical-align: middle;
+}
 
 //applicaition.html.erb 커스터마이징
 #nav {
