--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,27 +2,33 @@
 <div class="row">
   <div class="col-xs-12 col-md-12 col-lg-12 text-center">
     
+    
     <table id="table" border="0">
         <tr>
             <td align="center" colspan="6"><div class="numbers" id="count2" style="padding: 10px; "></div></td>
         </tr>
         <tr id="spacer1">
-            <td align="center" ><div class="title" ></div></td>
             <td align="center" ><div class="numbers" id="dday"></div></td>
+            <td align="center" class="title"><p>일</p></td>
             <td align="center" ><div class="numbers" id="dhour"></div></td>
+            <td align="center" class="title" style="width:60px;"><p>시간</p></td>
             <td align="center" ><div class="numbers" id="dmin"></div></td>
+            <td align="center" class="title"><p>분</p></td>
             <td align="center" ><div class="numbers" id="dsec"></div></td>
-            <td align="center" ><div class="title" ></div></td>
+            <td align="center" class="title"><p>초</p></td>
         </tr>
+        <!--
         <tr id="spacer2">
-            <td align="center" ><div class="title" ></div></td>
+            <td align="center" ></td>
             <td align="center" ><div class="title" id="days">Days</div></td>
             <td align="center" ><div class="title" id="hours">Hours</div></td>
             <td align="center" ><div class="title" id="minutes">Minutes</div></td>
             <td align="center" ><div class="title" id="seconds">Seconds</div></td>
             <td align="center" ><div class="title" ></div></td>
         </tr>
+        -->
     </table>
+    
   </div>
 </div>
 <div class="row">
