--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,14 +8,16 @@
             <td align="center" colspan="6"><div class="numbers" id="count2" style="padding: 10px; "></div></td>
         </tr>
         <tr id="spacer1">
-            <td align="center" ><div class="numbers" id="dday"></div></td>
-            <td align="center" class="title"><p>일</p></td>
-            <td align="center" ><div class="numbers" id="dhour"></div></td>
+            <td align="center" class="title"><p><전공이름>의 책 대여 사업은</p></td> 
+            <td align="right" ><div class="numbers" id="dday"></div></td>
+            <td align="center" class="title" style="width:30px;"><p>일</p></td>
+            <td align="right" ><div class="numbers" id="dhour"></div></td>
             <td align="center" class="title" style="width:60px;"><p>시간</p></td>
-            <td align="center" ><div class="numbers" id="dmin"></div></td>
-            <td align="center" class="title"><p>분</p></td>
-            <td align="center" ><div class="numbers" id="dsec"></div></td>
-            <td align="center" class="title"><p>초</p></td>
+            <td align="right" ><div class="numbers" id="dmin"></div></td>
+            <td align="center" class="title" style="width:30px;"><p>분</p></td>
+            <td align="right" ><div class="numbers" id="dsec"></div></td>
+            <td align="center" class="title" style="width:30px;"><p>초</p></td>
+            <td align="center" class="title"><p>에 열립니다.</p></td> 
         </tr>
         <!--
         <tr id="spacer2">
