--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,11 +34,11 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-6 col-md-6 col-lg-6 text-center">
+  <div class="col-xs-6 col-md-6 col-lg-6 text-center" id="book_button">
     <%= link_to(book_index_path) do %><%= image_tag "books.png", class: "center-block img-responsive img-circle hoverable" %> <% end %>
     <%= link_to(book_index_path) do %><h4>중고책 신청</h4><% end %>
   </div>
-  <div class="col-xs-6 col-md-6 col-lg-6 text-center">
+  <div class="col-xs-6 col-md-6 col-lg-6 text-center" id="locker_button">
     <%= link_to(locker_index_path) do %> <%= image_tag "lockers.png", class: "center-block img-responsive img-circle hoverable" %><% end %>
     <%= link_to(locker_index_path) do %><h4>사물함 신청</h4><% end %>
   </div>
